--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=parkingdb;Username=postgres;Password=123456"
+    "DefaultConnection": "Host=dpg-d4gg1bn5r7bs73b7tal0-a;Database=parkingdb_2bqa;Username=parkingdb_2bqa_user;Password=hrMnrVfWGPDBLtL5mToxdEt8BtBKD1k2"
   },
   "Logging": {
     "LogLevel": {
